<resources>
    <string name="app_name">Zebra Print Service</string>
    <string name="waiting_to_send">Waiting to send</string>
    <string name="usb_connected_printer">USB Connected Printer</string>
    <string name="vanity">Application Developed by G.M.Crean</string>
    <string name="printer_service_information">Printer Service Information</string>
    <string name="zebra_printer_service">Zebra Printer Service</string>
    <string name="thunderlight_software">©2020 Thunderlight Software. All Rights Reserved</string>
    <string name="rendering_engine_version">Rendering Engine Version</string>
    <string name="permissions">Permissions</string>
    <string name="enable_permissions">Click here to enable permissions to allow for bluetooth scanning</string>
    <string name="waiting">Waiting to send</string>
    <string name="interror">Internal error occurred</string>
    <string name="out_of_paper">Printer out of paper</string>
    <string name="paused">Printer paused</string>
    <string name="head_up">Head up</string>
    <string name="no_response">No response from printer</string>
    <string name="settings_title">Service Information</string>
    <string name="granted">Permission Granted</string>
    <string name="import_printers">Import Printers</string>
    <string name="export_printers">Export Printers</string>
    <string name="add_printer">Add Printer</string>
    <string name="service_version">Service Version</string>
    <string name="remove_all_printers">Remove all printers</string>
    <string name="bluetooth">Bluetooth Printer</string>
    <string name="network">Network Printer</string>
    <string name="usb">USB Connected Printer</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="export_ok">Printers Exported Successfully</string>
    <string name="export_failed">Export Failed</string>
    <string name="import_ok">Import Successful</string>
    <string name="import_failed">Import Failed</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="print">Print</string>
    <string name="unreadable_input">Input unreadable</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="media_size">Media size in Inches:</string>
    <string name="submit">Submit</string>
    <string name="printer_name">Printer name:</string>
    <string name="unknown_device">Unknown Device</string>
</resources>
